feat: initial snaps

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@open-rpc/inspector",
+  "name": "@xops.net/inspector-snaps",
   "version": "0.0.0-development",
   "description": "",
   "main": "package/index.js",
